--- a/nbill2.html
+++ b/nbill2.html
@@ -6,7 +6,7 @@
     <title>Quick Style Guide Line</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
     <style>
-        body {
+        /* body {
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
             display: flex;
@@ -14,8 +14,9 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-        }
+        } */
         .card {
+            font-family: Arial, sans-serif;
             background-color: white;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
