--- a/nbill2.html
+++ b/nbill2.html
@@ -6,23 +6,16 @@
     <title>Quick Style Guide Line</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
     <style>
-        body {
+
+        .card-timeline {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        .card {
             background-color: white;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             padding: 20px;
             width: 400px;
         }
-        .card h2 {
+        .card-timeline h2 {
             margin-top: 0;
             font-size: 18px;
             color: #333;
@@ -85,7 +78,8 @@
     </style>
 </head>
 <body>
-    <div class="card">
+
+    <div class="card-timeline">
         <h2>Your quick style guide line</h2>
         <div class="timeline">
             <div class="timeline-item">
